[lworld] C2 compilation fails with assert(addp->is_AddP() && addp->outcnt() > 0) failed: Don't process dead nodes

XMLWordPrintable

      Current CompileTask:
      C2: 13429 3346 b 4 compiler.arraycopy.TestArrayCopyUtils$ArrayDst::values (10 bytes)

      Stack: [0x00007f7c253fc000,0x00007f7c254fd000], sp=0x00007f7c254f7ee0, free space=1007k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0xb98f75] ConnectionGraph::find_second_addp(Node*, Node*)+0x85
      V [libjvm.so+0xb9931d] ConnectionGraph::is_oop_field(Node*, int, bool*)+0x1fd
      V [libjvm.so+0xb99772] ConnectionGraph::add_field(Node*, PointsToNode::EscapeState, int)+0xf2
      V [libjvm.so+0xba331e] ConnectionGraph::add_node_to_connection_graph(Node*, Unique_Node_List*)+0x83e
      V [libjvm.so+0xbac5dc] ConnectionGraph::compute_escape()+0x85c
      V [libjvm.so+0xbae311] ConnectionGraph::do_analysis(Compile*, PhaseIterGVN*)+0x181
      V [libjvm.so+0xa26532] Compile::Optimize()+0xbe2
      V [libjvm.so+0xa28ee8] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0x1ab8
      V [libjvm.so+0x8528fc] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1dc
      V [libjvm.so+0xa38d90] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xca0
      V [libjvm.so+0xa39898] CompileBroker::compiler_thread_loop()+0x5a8
      V [libjvm.so+0x191e2a6] JavaThread::thread_main_inner()+0x256
      V [libjvm.so+0x1924f60] Thread::call_run()+0x100
      V [libjvm.so+0x15efff6] thread_native_entry(Thread*)+0x116

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: